--- a/src/main/resources/templates/filmes/formulario.html
+++ b/src/main/resources/templates/filmes/formulario.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/src/main/resources/templates/css/style.css">
+        <link rel="stylesheet" href="/static/css/style.css">
         <title>Adicionar Filme | TADS Atividade Desenvolvimento Web 2023-1</title>
     </head>
     <body>
@@ -34,12 +34,12 @@
                     <small id="helpAnoLancamento" class="text-muted">Digite um ano valida</small>
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
-                <a class="btn btn-secondary" href="/filmes">Cancelar</a>
+                <a class="btn btn-secondary" href="filmes/">Cancelar</a>
             </form>
         </div>
-        <script src="/src/main/resources/templates/vendor/jquery/jquery-3.6.4.min.js"></script>
+        <script src="/static/vendor/jquery/jquery-3.6.4.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src="/src/main/resources/templates/js/custom.js"></script>
+        <script src="/static/js/custom.js"></script>
     </body>
 </html>
