--- a/src/main/resources/templates/filmes/lista-filmes.html
+++ b/src/main/resources/templates/filmes/lista-filmes.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/src/main/resources/templates/css/style.css">
+        <link rel="stylesheet" href="/static/css/style.css">
         <title>Lista de Filmes | TADS Atividade Desenvolvimento Web 2023-1</title>
     </head>
     <body>
@@ -32,11 +32,11 @@
                     </tr>
                 </tbody>
             </table>
-            <a class="btn btn-primary" href="/filmes/">+ Novo Filme</a>
+            <a class="btn btn-primary" href="filmes/incluir">+ Novo Filme</a>
         </div>
-        <script src="/src/main/resources/templates/vendor/jquery/jquery-3.6.4.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+        <script src="/static/vendor/jquery/jquery-3.6.4.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src="/src/main/resources/templates/js/custom.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+        <script src="/static/js/custom.js"></script>
     </body>
 </html>
