--- a/src/main/resources/templates/filmes/formulario.html
+++ b/src/main/resources/templates/filmes/formulario.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/static/css/style.css">
+        <link rel="stylesheet" th:href="@{/css/style.css}">
         <title>Adicionar Filme | TADS Atividade Desenvolvimento Web 2023-1</title>
     </head>
     <body>
@@ -17,29 +17,30 @@
                     <label for="titulo" class="form-label">Título:</label>
                     <input type="text" name="titulo" id="titulo" class="form-control" placeholder="Preencha o título do filme"
                         aria-describedby="helpTitulo" th:field="*{titulo}">
-                    <small id="helpTitulo" class="text-muted">Digite um titulo valido</small>
+                    <small id="helpTitulo" class="text-muted">Digite um titulo válido</small>
                 </div>
                 <!-- Genero -->
                 <div class="mb-3">
                     <label for="genero" class="form-label">Gênero:</label>
                     <input type="text" name="genero" id="genero" class="form-control" placeholder="Preencha o gênero do filme (ação, drama, terror, etc)"
                         aria-describedby="helpGenero" th:field="*{genero}">
-                    <small id="helpGenero" class="text-muted">Digite um gênero valido</small>
+                    <small id="helpGenero" class="text-muted">Digite um gênero válido</small>
                 </div>
                 <!-- Ano -->
                 <div class="mb-3">
                     <label for="anoLancamento" class="form-label">Ano de Lançamento:</label>
                     <input type="text" name="anoLancamento" id="anoLancamento" class="form-control" placeholder="Preencha o ano de lançamento do filme"
                         aria-describedby="helpAnoLancamento" th:field="*{anoLancamento}">
-                    <small id="helpAnoLancamento" class="text-muted">Digite um ano valida</small>
+                    <small id="helpAnoLancamento" class="text-muted">Digite um ano válido</small>
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
-                <a class="btn btn-secondary" href="filmes/">Cancelar</a>
+                <button type="submit" class="btn btn-primary" onclick="goBack()">Enviar</button>
+                <a class="btn btn-secondary" href="/incluir">Cancelar</a>
             </form>
         </div>
-        <script src="/static/vendor/jquery/jquery-3.6.4.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+
+        <script th:src="@{/vendor/jquery/jquery-3.6.4.min.js}"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src="/static/js/custom.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+        <script th:src="@{/js/custom.js}"></script>
     </body>
 </html>
