--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,8 @@
                 <p>Observações:
                     <em style="color: #aaa">
                         <br>- index.html está na pasta "templates" porque é a pasta padrão de acesso do Spring MVC
-                        <br>- arquivo gerado pelo banco H2 é salvo dentro da pasta do usuário logado na máquina
+                        <br>- arquivo gerado pelo banco H2 é salvo dentro da pasta raíz do projeto
+                        <br>- ao rodar o projeto a primeira vez, ele não atualiza a lista automaticamente, porém a partir da segunda vez ele ja atualiza
                     </em>
                 </p>
                 <p style="padding-top: 10px;"><a href="/filmes">Link para tela de listagem dos filmes</a></p>
